--- a/views/getting_started_ru.ejs
+++ b/views/getting_started_ru.ejs
@@ -7,60 +7,58 @@
 </head>
 <body>
 	<% include navbar.ejs %>
+	<script>
+		document.getElementById('getting_started').className += " active";
+	</script>
 	<div class="container" style='width:100%;'>
-    <div class="jumbotron side_bar" style='width:100%;'>	
-		<h2><%=l('Getting started')%></h2>
-		<div style="padding:20px">
+		<div class="jumbotron content content_margin">
+			<p>
+			В дополнение к данному руководству я сделал <a href="https://youtu.be/K-yl_WNjvwk">обучающий видеоролик.</a>
+			
+			<p>
+			После нажатия на кнопку "создать новую комнату" появиться следующее окно:
 
-		<p>
-		В дополнение к данному руководству я сделал <a href="https://youtu.be/K-yl_WNjvwk">обучающий видеоролик.</a>
-		
-		<p>
-		После нажатия на кнопку "создать новую комнату" появиться следующее окно:
+			<p>
+			<img src="<%=static_host%>/icons/tutorial1.jpg" alt="tutorial image 1">
+			<p>
 
-		<p>
-		<img src="<%=static_host%>/icons/tutorial1.jpg" alt="tutorial image 1">
-		<p>
+			Первым делом:
 
-		Первым делом:
+			<ol>
+				<li>Выбирите карту.</li>
+				<li>Чтобы пригласить друзей создайте ссылку на комнату нажав на кнопку, скопируйте ссылку.</li>
+			</ol>
 
-		<ol>
-			<li>Выбирите карту.</li>
-			<li>Чтобы пригласить друзей создайте ссылку на комнату нажав на кнопку, скопируйте ссылку.</li>
-		</ol>
+			<p>
+			После чего вы можете поделиться ссылкой со своими друзьями или соклановцами, чтобы они могли присоединиться к вашей тактике
+			
+			<p>
+			<img src="<%=static_host%>/icons/tutorial2.jpg" alt="tutorial image 2">
+			<p>
+			
+			После выбора карты и присоединения пользователей к комнате.
+			
+			<ol start=3>
+				<li>Список пользователей которые присоединились. Нажмите на пользователя, чтобы переключить привилегии (желтые - могут редактировать тактику, зеленые - могут редактировать и назначать привилегии другим пользователям.</li>
+				<li>В качестве альтернативы можно дать всем пользователям возможность редактировать тактику разблокировав комнату нажав по кнопке.</li>
+				<li>Начните создавать или объяснять тактику с помощью инструментов (читайте всплывающие подсказки).</li>
+				<li>Ниже показаны параметры выбранного инструмента.</li>
+				<li>С помощью чата можно общаться с пользователями которые присутсвуют в комнате.</li>
+				<li>Если хотите сохранить вашу тактику, необходимо войти на сайт с вашей учетной записью WG.</li>
+			</ol>
 
-		<p>
-		После чего вы можете поделиться ссылкой со своими друзьями или соклановцами, чтобы они могли присоединиться к вашей тактике
-		
-		<p>
-		<img src="<%=static_host%>/icons/tutorial2.jpg" alt="tutorial image 2">
-		<p>
-		
-		После выбора карты и присоединения пользователей к комнате.
-		
-		<ol start=3>
-			<li>Список пользователей которые присоединились. Нажмите на пользователя, чтобы переключить привилегии (желтые - могут редактировать тактику, зеленые - могут редактировать и назначать привилегии другим пользователям.</li>
-			<li>В качестве альтернативы можно дать всем пользователям возможность редактировать тактику разблокировав комнату нажав по кнопке.</li>
-			<li>Начните создавать или объяснять тактику с помощью инструментов (читайте всплывающие подсказки).</li>
-			<li>Ниже показаны параметры выбранного инструмента.</li>
-			<li>С помощью чата можно общаться с пользователями которые присутсвуют в комнате.</li>
-			<li>Если хотите сохранить вашу тактику, необходимо войти на сайт с вашей учетной записью WG.</li>
-		</ol>
-
-		<p>
-		<img src="<%=static_host%>/icons/tutorial3.jpg" alt="tutorial image 3">
-		<p>
-		
-		После того как вы вошли на сайт, появится несколько дополнительных функций
-		<ol start=9>
-			<li>Зеленая кнопка с игровым ником, показывает что вы успешно вошли в систему.</li>
-			<li>Нажав на эту кнопку вам предоставится возможность назвать и сохранить вашу тактику. Вы сможете возобновить тактику с первой страницы.</li>
-			<li>После того, как вы назвали, и сохранили вашу тактику, можно сохранять ее легко под тем же именем с помощью этой кнопки.</li>
-			<li>В качестве альтернативы можно загрузить тактику как изображение с помощью этой кнопки.</li>
-		</ol>
-
+			<p>
+			<img src="<%=static_host%>/icons/tutorial3.jpg" alt="tutorial image 3">
+			<p>
+			
+			После того как вы вошли на сайт, появится несколько дополнительных функций
+			<ol start=9>
+				<li>Зеленая кнопка с игровым ником, показывает что вы успешно вошли в систему.</li>
+				<li>Нажав на эту кнопку вам предоставится возможность назвать и сохранить вашу тактику. Вы сможете возобновить тактику с первой страницы.</li>
+				<li>После того, как вы назвали, и сохранили вашу тактику, можно сохранять ее легко под тем же именем с помощью этой кнопки.</li>
+				<li>В качестве альтернативы можно загрузить тактику как изображение с помощью этой кнопки.</li>
+			</ol>
+		</div>
 	</div>
-
-	</div>
-	</div>
+	<% include footer.ejs %>
 </body>
