--- a/views/index_ru.ejs
+++ b/views/index_ru.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
 	<% include navbar.ejs %>
+	<script>
+		document.getElementById('home').className += " active";
+	</script>
 	<style>
 		#banner {
 			background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url('<%=static_host%>/banners/banner_<%=game%>.jpg'); 
@@ -16,7 +19,7 @@
 	</style>
 
 	<div class="container" style='width:100%; position:relative;'>
-		<div class="jumbotron side_bar" style='width:100%; padding:0px; margin:0px;'>
+		<div class="jumbotron content" style="padding-left:0px; padding-right:0px">
 			<div id="banner" class="call_to_action" style='width:100%;'>
 				<div class="container" id="big_button_frame" style="text-align:center">
 					<h1>
@@ -108,6 +111,6 @@
 			</div>
 		</div>
 	</div>
-	<br />
+	<% include footer.ejs %>
 	<% include index_ru_js.ejs %>
 </body>
