--- a/views/planner2.ejs
+++ b/views/planner2.ejs
@@ -58,7 +58,8 @@
 	<% } %>
 
 	<script defer src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
-	<script defer src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+	<script defer src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>	
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.min.css">
 	<script defer src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>	
 	
 	<%if (false) {%>
@@ -74,14 +75,14 @@
 	<script defer src="<%=static_host%>/javascripts/planner.js"></script>	
 	<%}%>
 	
-	<script defer src="<%=static_host%>/javascripts/combined.js"></script>		
+	<script defer src="<%=static_host%>/javascripts/combined.js"></script>	
 	
 	<title><%=game.toUpperCase()%> <%=l('Tactics')%> - <%=l('Planner')%></title>
 	<meta name="description" content="<%=game.toUpperCase()%> <%=l('strategy')%>">
 	<script id="sid" data-sid="<%=sid%>"></script>
 	<script id="static_host" data-static_host="<%=static_host%>"></script>
 	<script id="socket_io_servers" data-socket_io_servers="<%=socket_io_servers%>"></script>
-
+	
 	<style>
 	input, textarea, .chatmsg, .userlist {
 	  color : black;
@@ -101,7 +102,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" style="padding-left:0px"
+					<a class="navbar-brand" style="padding-left:10px; padding-right:10px"
 						href="/<%=game%>"><i class="fa-lg icon-home "></i>
 					</a>
 				</div>
@@ -125,7 +126,7 @@
 			<div id="map_select_box">
 			<h4><%=l('Map')%>&nbsp;<span id="map_size"></span></h4>
 			<div class="dropdown inline" id="map_select_container">
-				<select class="selectpicker" id="map_select">
+				<select class="selectpicker" data-live-search="true" id="map_select">
 				<%-include(game + '_maps')%>
 				</select>
 			</div>
@@ -133,10 +134,10 @@
 			
 			<%if (game == 'wot') { %>
 				<div class="dropdown inline" style="display:none" id="wotbase_select_container">
-					<select class="selectpicker" id="wotbase_select"><%include wotbase_wot_maps.ejs%></select>
+					<select class="selectpicker" data-live-search="true" id="wotbase_select"><%include wotbase_wot_maps.ejs%></select>
 				</div>
 				<div class="dropdown inline" style="display:none" id="new_minimap_select_container">
-					<select class="selectpicker" id="new_minimap_select"><%include new_wot_minimaps.ejs%></select>
+					<select class="selectpicker" data-live-search="true" id="new_minimap_select"><%include new_wot_minimaps.ejs%></select>
 				</div>
 			<%} %>
 			<button class="btn btn-default menu_btn" aria-label="Left Align" id="custom_map" data-toggle="tooltip" title="<%=l('Custom map')%>">
@@ -234,8 +235,8 @@
 
 	<div id="right_side_bar" style="height:100%; max-width:304px; display: inline-block; vertical-align:top;">
 		<nav id="right_navbar" class="navbar navbar-inverse container-fluid" style="border-radius:0px; min-height:60px; margin-bottom: 0;">
-			<ul class="nav navbar-nav navbar-left container-fluid" style="margin-left:-10px; margin-right:-10px; padding-left:0px; padding-right:0px">
-				<div class="btn-group">
+			<ul id="right_icons" class="nav navbar-nav navbar-left container-fluid" style="margin-left:-5px; margin-right:-10px; padding-left:0px; padding-right:0px">
+				<div id="right-buttons" class="btn-group">
 				<button id="save" style="border-radius: 0px;" class="btn btn-default navbar-btn" data-placement="bottom" data-toggle="tooltip" title="<%=l('Save')%>">
 					<div class="icon icon-save"></div>
 				</button>
